--- a/k8s/ingress/sq-ingress.yaml
+++ b/k8s/ingress/sq-ingress.yaml
@@ -5,18 +5,13 @@ metadata:
   annotations:
     # use the shared ingress-nginx
     kubernetes.io/ingress.class: "nginx"
-    cert-manager.io/cluster-issuer: letsencrypt-dev
   labels:
     ingress: sq
 spec:
   rules:
-    - host: my.sonarqube.io
+    - host: dmeppiel.eu.ngrok.io
       http:
         paths:
         - backend:
             serviceName: ce-lts-sonarqube
             servicePort: http
-  tls:
-    - secretName: sq-tls
-      hosts:
-      - my.sonarqube.io
